IaC and preparing for Phase 2

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,7 @@
 # API URL for cell detection backend
 # In development, the Vite proxy handles /api requests to localhost:8000
 # In production, set this to your backend URL
+#
+# Production: https://api.cellcount.feifan.dev
+# Development: Leave empty to use proxy (recommended)
 VITE_API_URL=
